--- a/install_packages/apache.yml
+++ b/install_packages/apache.yml
@@ -7,13 +7,33 @@
     - name: update repository intex
       apt:
         update_cache: yes
+      when: ansible_distribution in ["Debian", "Ubuntu"]
 
     - name: install apache2 package
       apt:
         name: apache2
         state: latest
+      when: ansible_distribution in ["Debian", "Ubuntu"]
 
     - name: add PHP support for apche
       apt:
         name: libapache2-mod-php
         state: latest
+      when: ansible_distribution in ["Debian", "Ubuntu"]
+    
+    - name: update repository intex
+      dnf:
+        update_cache: yes
+      when: ansible_distribution == "CentOS"
+
+    - name: install apache2 package
+      dnf:
+        name: httpd
+        state: latest
+      when: ansible_distribution == "CentOS"
+
+    - name: add PHP support for apche
+      dnf:
+        name: php
+        state: latest
+      when: ansible_distribution == "CentOS"
