--- a/install_packages/site.yml
+++ b/install_packages/site.yml
@@ -1,10 +1,68 @@
 ---
+
 - hosts: all
+  become: true
   tasks:
-    - name: install packages
-      become: true
-      become_user: root
+    - name: install updates (CentOS)
+      tags: always
+      dnf: 
+        update_only: yes
+        update_cache: yes
+      when: ansible_distribution == "CentOS"
+
+    - name: install updates (Ubuntu)
+      tags: always
       apt:
-        state: present
+        upgrade: dist
+        update_cache: yes
+      when: ansible_distribution == "Ubuntu"
+
+- hosts: web_servers
+  become: true
+  tasks:
+    - name: install apache2 and php packages for Ubuntu
+      tags: apache,apache2,ubuntu
+      apt:
         name:
-          - net-tools
+          - apache2
+          - libapache2-mod-php
+        state: latest
+        update_cache: yes
+      when: ansible_distribution in ["Debian", "Ubuntu"]
+
+
+    - name: install apache2 pnd php packages for CentOS
+      tags: apache,centos,httpd
+      dnf:
+        name:
+          - httpd
+          - php
+        state: latest
+        update_cache: yes
+      when: ansible_distribution == "CentOS"
+
+- hosts: db_servers
+  become: true
+  tasks: 
+    - name: install mariadb package (CentOS)
+      tags: centos,db,mariadb
+      dnf:
+        name: mariadb
+        state: latest
+      when: ansible_distribution == "CentOS"
+
+    - name: install mariadb package (Ubunru)
+      tags: db,mariadb,ubuntu
+      apt:
+        name: mariadb-server
+        state: latest
+      when: ansible_distribution == "Ubuntu"
+
+- hosts: file_servers
+  become: true
+  tasks:
+    - name: install samba package
+      tags: samba
+      package:
+        name: samba
+        state: latest
