--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,5 @@
 [defaults]
 inventory = inventory
 private_key_file = ~/.ssh/ansible
-interpreter_python = auto
+#interpreter_python = auto
+interpreter_python = /usr/bin/python3
