--- a/install_packages/apache.yml
+++ b/install_packages/apache.yml
@@ -4,16 +4,37 @@
   become: true
   tasks:
 
-  - name: update repository index
+  - name: update repository index for Debian/Ubuntu
     apt:
       update_cache: yes
+    when: ansible_distribution in ["Debian", "Ubuntu"]
 
   - name: install apache2 package
     apt:
       name: apache2
       state: latest
+    when: ansible_distribution in ["Debian", "Ubuntu"]
 
   - name: add php support for apache
     apt:
       name: libapache2-mod-php
       state: latest
+    when: ansible_distribution in ["Debian", "Ubuntu"]
+
+
+  - name: update repository index for CentOS
+    dnf:
+      update_cache: yes
+    when: ansible_distribution == "CentOS"
+
+  - name: install httpd package
+    dnf:
+      name: httpd
+      state: latest
+    when: ansible_distribution == "CentOS"
+
+  - name: add php support for httpd
+    dnf:
+      name: php
+      state: latest
+    when: ansible_distribution == "CentOS"
