--- a/remove_packages/apache.yml
+++ b/remove_packages/apache.yml
@@ -7,13 +7,17 @@
   - name: update repository index
     apt:
       update_cache: yes
-
+    when: ansible_distribution == "Ubuntu" 
+          
+  
   - name: remove apache2 packages
     apt:
       name: apache2
       state: absent
+    when: ansible_distribution == "Ubuntu"
 
   - name: remove php support for apache
     apt:
       name: libapache2-mod-php
       state: absent
+    when: ansible_distribution == "Ubuntu"
