--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,3 +3,4 @@ inventory = inventory
 private_key_file = ~/.ssh/ansible
 #interpreter_python = auto
 interpreter_python = /usr/bin/python3
+remote_user = simone
