--- a/roles/web_servers/tasks/main.yml
+++ b/roles/web_servers/tasks/main.yml
@@ -1,35 +1,26 @@
-- name: install apache and php for (CentOS/Fedora)
+- name: install apache and php packages
   tags: apache,centos,httpd
-  dnf:
+  package:
     name:
-      - httpd
-      - php
+      - "{{ apache_package_name }}"
+      - "{{ php_package_name }}"
     state: latest
-  when: ansible_distribution in ["CentOS", "Fedora"]
 
-- name: start httpd (Centos/Fedora)
+- name: start and enable apache service
   tags: apache,centos,httpd
   service:
-    name: httpd
+    name: "{{apache_service }}"
     state: started
     enabled: yes
-  when: ansible_distribution in ["CentOS", "Fedora"]
 
 - name: change e-mail address for admin
   tags: apache,centos,httpd
   lineinfile:
     path: /etc/httpd/conf/httpd.conf
     regexp: '^ServerAdmin'
-    line: ServerAdmin gm-admin@localhost
+    line: ServerAdmin gm-admin@localhost.local
   when: ansible_distribution in ["CentOS", "Fedora"]
-  register: httpd
-
-- name: restart httpd (CentOS)
-  tags: apache,cebtos,httpd
-  service:
-    name: httpd
-    state: restart
-  when: httpd.changed
+  notify: restart_apache
 
 - name: copy default html file for site
   tags: apache,apache2,httpd
@@ -49,12 +40,4 @@
     group: root
     mode: 0644
 
-- name: install apache and php for (Ubuntu/Fedora)
-  tags: apache,apache2,ubuntu
-  apt:
-    name:
-      - apache2
-      - libapache2-mod-php
-    state: latest
-  when: ansible_distribution in ["Debian", "Ubuntu"]
 
